# fingo-tap

./: .gitignore  224a6423-a559-420b-9407-389a2f2dbc17.json  65969fe5-38df-4bce-ac08-145ea27b8042.json  LICENSE.md  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py  stderror.txt
.trae/documents/: 修复多步骤任务上下文与输出并恢复单步骤任务.md
src/open_codex/: .env.example  README_MULTISTEP.md  agent_builder.py  custom_prompt.txt  env_manager.py  main.py  storage_builder.py
src/open_codex/agents/: litellm_agent.py  ollama_agent.py  phi_4_mini.py  phi_4_mini_agent.py
src/open_codex/examples/: multistep_example.py
src/open_codex/executors/: multistep_executor.py
src/open_codex/interfaces/: llm_agent.py  multistep_task.py
src/open_codex/resources/: config.example.yaml  prompt.txt
src/open_codex/session/: session_manager.py
src/open_codex/tests/: test_multistep.py
