[project]
name = "open_codex"
version = "0.1.18"
description = "AI CLI with OSS LLM integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.30.2",
    "llama-cpp-python>=0.3.8",
    "prompt_toolkit",
    "pyinstaller>=6.13.0",
    "pyperclip>=1.9.0",
]

[project.scripts]
open-codex = "open_codex.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"open_codex" = ["resources/*.txt"]
